microservices/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketplace-ingress
  # annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  # ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /auth(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /product(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 80
      - path: /order(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 80
      - path: /wishlist(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: wishlist-service
            port:
              number: 80
      - path: /tenant(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: tenant-service
            port:
              number: 80
